--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,13 @@ jobs:
         image:
           - zookeeper
           - kafka
+        include:
+          - image: kafka
+            version_var: KAFKA_VERSION
+            version: 3.1.0
+          - image: zookeeper
+            version_var: ZK_VERSION
+            version: 3.8.0
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -25,8 +32,10 @@ jobs:
             ${{ github.repository_owner }}/${{ matrix.image }}
           flavor: |
             latest=${{ github.ref_name == 'master' }}
-          labels: |
-            org.opencontainers.image.authors=Geoff Bourne <itzgeoff@gmail.com>
+          tags: |
+            type=pep440,pattern={{version}},value=${{ matrix.version }}
+            type=pep440,pattern={{major}}.{{minor}},value=${{ matrix.version }}
+            type=pep440,pattern={{major}},value=${{ matrix.version }}
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -45,6 +54,8 @@ jobs:
         with:
           context: ${{ matrix.image }}
           platforms: linux/amd64,linux/arm64
+          build-args: |
+            ${{ matrix.version_var }}=${{ matrix.version }}
           push: ${{ github.ref_type == 'tag' || github.ref_name == 'master' }}
           tags: ${{ steps.meta.outputs.tags }}
           # ensure latest base image is used
