--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
             type=pep440,pattern={{version}},value=${{ matrix.version }}
             type=pep440,pattern={{major}}.{{minor}},value=${{ matrix.version }}
             type=pep440,pattern={{major}},value=${{ matrix.version }}
+            type=ref,event=branch,enable=false
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -61,5 +62,5 @@ jobs:
           # ensure latest base image is used
           pull: true
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha,scope=${{ matrix.variant }}
-          cache-to: type=gha,mode=max,scope=${{ matrix.variant }}
+          cache-from: type=gha,scope=${{ matrix.image }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.image }}
