Aligned volume paths with cp-zookeeper and cp-kafka

--- a/examples/single-node/docker-compose.yml
+++ b/examples/single-node/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   zk:
     image: itzg/zookeeper
     volumes:
-      - zk:/data
+      - zk:/var/lib/zookeeper/data
   kafka-0:
     depends_on:
       - zk
@@ -15,8 +15,8 @@ services:
     ports:
       - "9092:9092"
     volumes:
-      - kafka:/data
+      - kafka-0:/var/lib/kafka/data
 
 volumes:
   zk: {}
-  kafka: {}
+  kafka-0: {}
