Added healthcheck for zookeeper

--- a/zookeeper/Dockerfile
+++ b/zookeeper/Dockerfile
@@ -25,4 +25,6 @@ STOPSIGNAL SIGTERM
 
 WORKDIR /opt/zookeeper
 
+HEALTHCHECK --start-period=5s --interval=10s --retries=3 CMD /init/healthcheck
+
 CMD ["/init/zookeeper"]
