--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,12 @@ on:
     paths-ignore:
       - "*.md"
       - "examples/**"
+  pull_request:
+    branches:
+      - master
+    paths-ignore:
+      - "*.md"
+      - "examples/**"
 
 jobs:
   build:
@@ -17,10 +23,8 @@ jobs:
           - kafka
         include:
           - image: kafka
-            version_var: KAFKA_VERSION
             version: 3.1.0
           - image: zookeeper
-            version_var: ZK_VERSION
             version: 3.8.0
     runs-on: ubuntu-20.04
     steps:
@@ -60,7 +64,7 @@ jobs:
           context: ${{ matrix.image }}
           platforms: linux/amd64,linux/arm64
           build-args: |
-            ${{ matrix.version_var }}=${{ matrix.version }}
+            UPSTREAM_VERSION=${{ matrix.version }}
           push: ${{ github.ref_type == 'tag' || github.ref_name == 'master' }}
           tags: ${{ steps.meta.outputs.tags }}
           # ensure latest base image is used
