--- a/kafka/Dockerfile
+++ b/kafka/Dockerfile
@@ -5,10 +5,10 @@ RUN DEBIAN_FRONTEND=noninteractive \
       curl \
     && apt-get clean
 
-ARG KAFKA_VERSION=3.1.0
-RUN curl -fsSL -o /tmp/kafka.tgz https://dlcdn.apache.org/kafka/${KAFKA_VERSION}/kafka_2.13-${KAFKA_VERSION}.tgz \
+ARG UPSTREAM_VERSION=3.1.0
+RUN curl -fsSL -o /tmp/kafka.tgz https://dlcdn.apache.org/kafka/${UPSTREAM_VERSION}/kafka_2.13-${UPSTREAM_VERSION}.tgz \
     && tar -C /opt -xf /tmp/kafka.tgz \
-    && mv /opt/kafka_2.13-${KAFKA_VERSION} /opt/kafka
+    && mv /opt/kafka_2.13-${UPSTREAM_VERSION} /opt/kafka
 
 FROM eclipse-temurin:17-jdk as main
 
